--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
     <div id="container">
+        <h1>Animal Gallery</h1>
         <div id="slider">
-        </div>
-        <div>
-            <button id="prev-btn">Previous</button>
-            <button id="next-btn">Next</button>
+            <button id="prev-btn"><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="next-btn"><i class="fa-solid fa-arrow-right"></i></button>
+            <div id="thumbnails-cont">
+                
+            </div>
         </div>
     </div>
 
